--- a/index.html
+++ b/index.html
@@ -5,31 +5,51 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nomad chat</title>
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-
   <link rel="stylesheet" href="chat.css">
-
 </head>
 <body>
 
+  <header class="header">
+    <div class="wrapper"></div>
+
+  </header>
+
   <div class="container-1">
+
     <div class="box1">
-      <h3>Nomad List-1</h3>
-      <p>text</p>
+      <header>
+
+        <nav id="menu">
+          <ul>
+            <li><img src="svg/Object.svg" alt="object"></li>
+            <li><img src="svg/logo1.svg" alt="logo1"></li>
+            <li><img src="svg/logo2.svg" alt="logo2"></li>
+            <li><img src="svg/logo3.svg" alt="logo3"></li>
+            <li><img src="svg/logo4.svg" alt="logo4"></li>
+            <li><img src="svg/logo5.svg" alt="logo5"></li>
+            <li><img src="svg/logo6.svg" alt="logo6"></li>
+            <li><img src="svg/logo7.svg" alt="logo7"></li>
+            <li><img src="svg/+.svg" alt="+"></li>
+          </ul>
+        </nav>
+        
+
+      </header>
     </div>
     <div class="box2">
-      <h3>Nomad List-2</h3>
-      <p>text</p>
+      <nav>
+
+      </nav>
     </div>
     <div class="box3">
-      <h3>Nomad List-3</h3>
+      <h3>Nomad List 3</h3>
       <p>text</p>
     </div>
     <div class="box4">
-      <h3>Nomad List-4</h3>
+      <h3>Nomad List 4</h3>
       <p>text</p>
     </div>
   </div>
