--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
 <body>
 <div class="container">
     <div class="box1 line">
+      <div class="ryg">
+        <div class="points"><img src="svg/Object.svg" alt="points"></div>
+      </div>
         <div class="menu">
-            <div class="menu__item"><img src="svg/dots.svg" alt="object"></div>
-            <div class="menu__item"><img src="svg/logo1.svg" alt="logo1"></div>
+            <div class="menu__item1"><img src="svg/logo1.svg" alt="logo1"></div>
             <div class="menu__item"><img src="svg/logo2.svg" alt="logo2"></div>
             <div class="menu__item"><img src="svg/logo3.svg" alt="logo3"></div>
             <div class="menu__item"><img src="svg/logo4.svg" alt="logo4"></div>
             <div class="menu__item"><img src="svg/logo5.svg" alt="logo5"></div>
             <div class="menu__item"><img src="svg/logo6.svg" alt="logo6"></div>
             <div class="menu__item"><img src="svg/logo7.svg" alt="logo7"></div>
-            <div class="menu__item"><img src="svg/+.svg" alt="+"></div>
+        </div>
+        <div class="add">
+          <div class="plus"><img src="svg/+.svg" alt="plus"></div>
         </div>
     </div>
     <div class="box2 line">
