--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
         </div>
     </div>
     <div class="box2 line">
+        <div class="box2__header">
+            <div class="header__item1">
+                <div class="header__caption">Nomad list</div>
+                <div class="header__settings">@</div>
+            </div>
+            <div class="header__item2"></div>
+        </div>
+        <div class="channels"></div>
+        <div class="friends"></div>
     </div>
     <div class="box3 line">
         <h3>Nomad List 3</h3>
