[hope] fix headers

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="container">
     <div class="box1 line">
         <div class="ryg">
-           <div class="points"><img src="svg/Dots os.svg" alt="points"></div>
+            <div class="points"><img src="svg/Dots os.svg" alt="points"></div>
         </div>
         <div class="menu">
             <div class="menu__item1"><img src="svg/logo1.svg" alt="logo1"></div>
@@ -26,109 +26,106 @@
             <div class="menu__item"><img src="svg/logo7.svg" alt="logo7"></div>
         </div>
         <div class="add">
-          <div class="plus"><img src="svg/+.svg" alt="plus"></div>
+            <div class="plus"><img src="svg/+.svg" alt="plus"></div>
         </div>
     </div>
     <div class="box2 line">
-
-      <div class="header__item1">
-        <div class="header__caption">Nomad list</div>
-        <div class="header__settings"> <img src="svg/box2/Combined shape 347.svg" alt="header__settings"></div>
-      </div>
-
-      <div class="header__item2">
+        <div class="nomads__header">
+            <div class="nomads__caption">Nomad list</div>
+            <div class="nomads__settings"><img src="svg/box2/Combined shape 347.svg" alt="header__settings"></div>
+        </div>
         <div class="channels">
-          <div class="channels__text">CHANNELS</div>
-          <div class="channals__numb">11</div>
-          <div class="channels__list">
-            <div class="cl"># general</div>
-            <div class="cl"># support</div>
-            <div class="cl"># marketing</div>
-            <div class="cl"># thailand</div>
-            <div class="cl"># bali</div>
-            <div class="cl"># poland</div>
-            <div class="cl"># australia</div>
-            <div class="cl"># jobs</div>
-            <div class="cl"># startups</div>
-            <div class="cl"># italy</div>
-            <div class="cl"># freelance</div>
-          </div>
+            <div class="channels__header">
+                <div class="channels__text">CHANNELS</div>
+                <div class="channals__numb">11</div>
+            </div>
+            <div class="channels__list">
+                <div class="cl"># general</div>
+                <div class="cl"># support</div>
+                <div class="cl"># marketing</div>
+                <div class="cl"># thailand</div>
+                <div class="cl"># bali</div>
+                <div class="cl"># poland</div>
+                <div class="cl"># australia</div>
+                <div class="cl"># jobs</div>
+                <div class="cl"># startups</div>
+                <div class="cl"># italy</div>
+                <div class="cl"># freelance</div>
+            </div>
         </div>
-      </div>
-
-      <div class="header__item3">
         <div class="friends">
-          <div class="friends__text">FRIENDS</div>
-          <div class="friends__numb">82</div>
-          <div class="friedns__list">
-            <div class="fl1"><img src="svg/box2/friends_foto/1.svg" alt="1"></div>
-            <div class="fl2"><img src="svg/box2/friends_foto/2.svg" alt="2"></div>
-            <div class="fl3"><img src="svg/box2/friends_foto/3.svg" alt="3"></div>
-            <div class="fl4"><img src="svg/box2/friends_foto/4.svg" alt="4"></div>
-            <div class="fl5"><img src="svg/box2/friends_foto/5.svg" alt="5"></div>
-            <div class="fl6"><img src="svg/box2/friends_foto/6.svg" alt="6"></div>
-          </div>
+            <div class="fiends__header">
+                <div class="friends__text">FRIENDS</div>
+                <div class="friends__numb">82</div>
+            </div>
+            <div class="friedns__list">
+                <div class="fl1"><img src="svg/box2/friends_foto/1.svg" alt="1"></div>
+                <div class="fl2"><img src="svg/box2/friends_foto/2.svg" alt="2"></div>
+                <div class="fl3"><img src="svg/box2/friends_foto/3.svg" alt="3"></div>
+                <div class="fl4"><img src="svg/box2/friends_foto/4.svg" alt="4"></div>
+                <div class="fl5"><img src="svg/box2/friends_foto/5.svg" alt="5"></div>
+                <div class="fl6"><img src="svg/box2/friends_foto/6.svg" alt="6"></div>
+            </div>
         </div>
-    </div>
 
-    <div class="box3 line">
-      <div class="top">
-        <div class="text_star">
-         <div class="top__text"># general</div>
-         <div class="top__star"><img src="svg/box3/star.svg" alt="star"></div>
+        <div class="box3 line">
+            <div class="top">
+                <div class="text_star">
+                    <div class="top__text"># general</div>
+                    <div class="top__star"><img src="svg/box3/star.svg" alt="star"></div>
+                </div>
+                <div class="followers">
+                    <div class="followers__icon"><img src="svg/box3/followers_icon.svg" alt="icon"></div>
+                    <div class="followers__numb">1,093</div>
+                </div>
+                <div class="search">
+                    <div class="search__window"></div>
+                    <div class="search__linza"><img src="svg/box3/linza.svg" alt="linza"></div>
+                </div>
+                <div class="other">
+                    <div class="bell"><img src="svg/box3/bell.svg" alt="bell"></div>
+                    <div class="other__points"><img src="svg/box3/other__icon.svg" alt="other__points"></div>
+                </div>
+            </div>
+            <div class="chat">
+                .
+            </div>
+            <div class="write"></div>
         </div>
-        <div class="followers">
-          <div class="followers__icon"><img src="svg/box3/followers_icon.svg" alt="icon"></div>
-          <div class="followers__numb">1,093</div>
-        </div>
-        <div class="search">
-          <div class="search__window"></div>
-          <div class="search__linza"><img src="svg/box3/linza.svg" alt="linza"></div>
-        </div>
-        <div class="other">
-          <div class="bell"><img src="svg/box3/bell.svg" alt="bell"></div>
-          <div class="other__points"><img src="svg/box3/other__icon.svg" alt="other__points"></div>
-        </div>
-      </div>
-      <div class="chat">
-        .
-      </div>
-      <div class="write"></div>
-    </div>
 
-    <div class="box4 line">
-      <div class="photo">
-        <div class="userphoto"><img src="svg/box4/userphoto.svg" alt="useerphoto"></div>
-      </div>
-      <div class="basic">
-        <div class="realname">Amilia Luna</div>
-        <div class="user_status"><img src="svg/box4/green_point.svg" alt="user_status"></div>
-        <div class="profession">UI Designer</div>
-      </div>
-      <div class="social">
-        <div class="social_icon"><img src="svg/box4/Social.svg" alt="social_icon"></div>
-      </div>
-      <div class="button">
-        <div class="button_message"></div>
-        <div class="button_other"></div>
-      </div>
-       <div class="username">
-        <div class="chats__name">Username</div>
-        <div class="name">@amilia_lu</div>
-      </div>
-      <div class="mail">
-        <div class="email__logo">E-mail</div>
-        <div class="email">a-luna@gmail.com</div>
-      </div>
-      <div class="skype">
-        <div class="skype__logo">Skype</div>
-        <div class="skype">amiluna</div>
-      </div>
-      <div class="zone">
-        <div class="timezone">Timnezone</div>
-        <div class="time">2:21 PM Local time</div>
-      </div>
+        <div class="box4 line">
+            <div class="photo">
+                <div class="userphoto"><img src="svg/box4/userphoto.svg" alt="useerphoto"></div>
+            </div>
+            <div class="basic">
+                <div class="realname">Amilia Luna</div>
+                <div class="user_status"><img src="svg/box4/green_point.svg" alt="user_status"></div>
+                <div class="profession">UI Designer</div>
+            </div>
+            <div class="social">
+                <div class="social_icon"><img src="svg/box4/Social.svg" alt="social_icon"></div>
+            </div>
+            <div class="button">
+                <div class="button_message"></div>
+                <div class="button_other"></div>
+            </div>
+            <div class="username">
+                <div class="chats__name">Username</div>
+                <div class="name">@amilia_lu</div>
+            </div>
+            <div class="mail">
+                <div class="email__logo">E-mail</div>
+                <div class="email">a-luna@gmail.com</div>
+            </div>
+            <div class="skype">
+                <div class="skype__logo">Skype</div>
+                <div class="skype">amiluna</div>
+            </div>
+            <div class="zone">
+                <div class="timezone">Timnezone</div>
+                <div class="time">2:21 PM Local time</div>
+            </div>
+        </div>
     </div>
-</div>
 </body>
 </html>
