--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         <div class="ryg">
             <div class="points"><img src="svg/Dots os.svg" alt="points"></div>
         </div>
+      <div class="justfy">
         <div class="menu">
-            <div class="menu__item1"><img src="svg/logo1.svg" alt="logo1"></div>
+            <div class="menu__item"><img src="svg/logo1.svg" alt="logo1"></div>
             <div class="menu__item"><img src="svg/logo2.svg" alt="logo2"></div>
             <div class="menu__item"><img src="svg/logo3.svg" alt="logo3"></div>
             <div class="menu__item"><img src="svg/logo4.svg" alt="logo4"></div>
@@ -28,11 +29,19 @@
         <div class="add">
             <div class="plus"><img src="svg/+.svg" alt="plus"></div>
         </div>
+      </div>
     </div>
     <div class="box2 line">
         <div class="nomads__header">
-            <div class="nomads__caption">Nomad list</div>
-            <div class="nomads__settings"><img src="svg/box2/Combined shape 347.svg" alt="header__settings"></div>
+            <div class="nomads__text">Nomad list</div>
+             <div class="icon">
+              <div class="iconV"><img src="svg/box2/IconV.svg" alt="iconV"></div>
+              <div class="iconS"><img src="svg/box2/Combined shape 347.svg" alt="iconS"></div>
+            </div>
+        </div>
+        <div class="alltreads">
+            <div class="treads__icon"><img src="svg/box2/treads__icon.svg" alt="treads__icon"></div>
+            <div class="treads__text">All treads</div>
         </div>
         <div class="channels">
             <div class="channels__header">
@@ -67,8 +76,8 @@
                 <div class="fl6"><img src="svg/box2/friends_foto/6.svg" alt="6"></div>
             </div>
         </div>
-
-        <div class="box3 line">
+    </div>
+    <div class="box3 line">
             <div class="top">
                 <div class="text_star">
                     <div class="top__text"># general</div>
@@ -91,9 +100,9 @@
                 .
             </div>
             <div class="write"></div>
-        </div>
+    </div>
 
-        <div class="box4 line">
+    <div class="box4 line">
             <div class="photo">
                 <div class="userphoto"><img src="svg/box4/userphoto.svg" alt="useerphoto"></div>
             </div>
@@ -125,7 +134,7 @@
                 <div class="timezone">Timnezone</div>
                 <div class="time">2:21 PM Local time</div>
             </div>
-        </div>
     </div>
+ </div>
 </body>
 </html>
