--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="channals__numb">11</div>
             </div>
             <div class="channels__list">
-                <div class="cl"># general</div>
+                <div class="clg"># general</div>
                 <div class="cl"># support</div>
                 <div class="cl"># marketing</div>
                 <div class="cl"># thailand</div>
@@ -68,17 +68,18 @@
                 <div class="friends__numb">82</div>
             </div>
             <div class="friedns__list">
-                <div class="fl1"><img src="svg/box2/friends_foto/1.svg" alt="1"></div>
-                <div class="fl2"><img src="svg/box2/friends_foto/2.svg" alt="2"></div>
-                <div class="fl3"><img src="svg/box2/friends_foto/3.svg" alt="3"></div>
-                <div class="fl4"><img src="svg/box2/friends_foto/4.svg" alt="4"></div>
-                <div class="fl5"><img src="svg/box2/friends_foto/5.svg" alt="5"></div>
-                <div class="fl6"><img src="svg/box2/friends_foto/6.svg" alt="6"></div>
+                <div class="fl"><img src="svg/box2/friends_foto/1.svg" alt="1"></div>
+                <div class="fl"><img src="svg/box2/friends_foto/2.svg" alt="2"></div>
+                <div class="fl"><img src="svg/box2/friends_foto/3.svg" alt="3"></div>
+                <div class="fl"><img src="svg/box2/friends_foto/4.svg" alt="4"></div>
+                <div class="fl"><img src="svg/box2/friends_foto/5.svg" alt="5"></div>
+                <div class="fl"><img src="svg/box2/friends_foto/6.svg" alt="6"></div>
             </div>
         </div>
     </div>
     <div class="box3 line">
             <div class="top">
+               <div class="tf">
                 <div class="text_star">
                     <div class="top__text"># general</div>
                     <div class="top__star"><img src="svg/box3/star.svg" alt="star"></div>
@@ -87,6 +88,8 @@
                     <div class="followers__icon"><img src="svg/box3/followers_icon.svg" alt="icon"></div>
                     <div class="followers__numb">1,093</div>
                 </div>
+               </div>
+               <div class="so">
                 <div class="search">
                     <div class="search__window"></div>
                     <div class="search__linza"><img src="svg/box3/linza.svg" alt="linza"></div>
@@ -95,6 +98,7 @@
                     <div class="bell"><img src="svg/box3/bell.svg" alt="bell"></div>
                     <div class="other__points"><img src="svg/box3/other__icon.svg" alt="other__points"></div>
                 </div>
+            </div>
             </div>
             <div class="chat">
                 .
@@ -109,8 +113,9 @@
             <div class="basic">
                 <div class="realname">Amilia Luna</div>
                 <div class="user_status"><img src="svg/box4/green_point.svg" alt="user_status"></div>
-                <div class="profession">UI Designer</div>
             </div>
+            <div class="profession">UI Designer</div>
+            
             <div class="social">
                 <div class="social_icon"><img src="svg/box4/Social.svg" alt="social_icon"></div>
             </div>
