--- a/index.html
+++ b/index.html
@@ -80,60 +80,83 @@
     <div class="box3 line">
             <div class="top">
                <div class="tf">
-                <div class="text_star">
+                 <div class="text_star">
                     <div class="top__text"># general</div>
                     <div class="top__star"><img src="svg/box3/star.svg" alt="star"></div>
                 </div>
+               </div>
+               <div class="other">
                 <div class="followers">
                     <div class="followers__icon"><img src="svg/box3/followers_icon.svg" alt="icon"></div>
                     <div class="followers__numb">1,093</div>
                 </div>
-               </div>
-               <div class="so">
-                <div class="search">
-                        <input type="text" placeholder="Search...">
-               </div>
-                <div class="other">
+                <input type="text" placeholder="Search..." class="search">
                     <div class="bell"><img src="svg/box3/bell.svg" alt="bell"></div>
                     <div class="other__points"><img src="svg/box3/other__icon.svg" alt="other__points"></div>
                 </div>
-            </div>
+            
             </div>
             <hr>
-
-            <div class="chat">
-               <div class="comments">
+               <div class="chat">
                 <div class="idiot">
                     <img src="svg/box3/comments/1.svg" alt="i1" class="left">
-                    <div class="idiot__name">Jeshua Stout</div>
+                    <div class="nt">
+                     <div class="idiot__name">Jeshua Stout</div>
+                     <div class="time">6:38 PM</div>
+                    </div>
+                    <div class="comment"><a href="/">@pierrhack I did for 6 days in Iceland</a></div>
                 </div>
-                <br>
+                <hr class="date1">
                 <div class="idiot">
                     <img src="svg/box3/comments/2.svg" alt="i2" class="left">
-                    <div class="idiot__name">Harold Adams</div>
+                    <div class="nt">
+                       <div class="idiot__name">Harold Adams</div>
+                       <div class="time">5:02 PM</div>
+                    </div>
+                    <div class="comment">Which country to visit next? This is a photo with my friends - celebrating in Bali 😎 <br> <a href="/"> my-top-places.jpg</a></div>
                     <br>
                     <img src="svg/box3/comments/photo2.svg" alt="i2p">
-                    <img src="svg/box3/comments/Emojis.svg" alt="em">
+                    <img src="svg/box3/comments/Emojis.svg" alt="em" class="emoj">
                 </div>
-                <br>
+                <hr class="date2">
                 <div class="idiot">
                     <img src="svg/box3/comments/3.svg" alt="i3" class="left">
-                    <div class="idiot__name">Aada Laine</div>
+                    <div class="nt">
+                      <div class="idiot__name">Aada Laine</div>
+                      <div class="time">11:54 AM</div>
+                    </div>
+                    <div class="comment"><a href="/">@har_adams wow it’s amazing, I want to buy a van and travelling next year 🚌</a></div>
                 </div>
-                <br>
+                <hr class="date3">
                 <div class="idiot">
                     <img src="svg/box3/comments/4.svg" alt="i4" class="left">
-                    <div class="idiot__name">Nala Hester</div>
+                    <div class="nt">
+                      <div class="idiot__name">Nala Hester</div>
+                      <div class="time">11:54 AM</div>
+                    </div>
+                    <div class="comment">Working from a van in Australia isn’t feasible if you need internet. It may have improved over the last years but I spent some time in a 
+                        camper van around Tasmania and internet was a real problem (and Tasmania is tiny compared to the rest of the country).</div>
                 </div>
-                <br>
                 <div class="idiot">
                     <img src="svg/box3/comments/5.svg" alt="i5" class="left">
-                    <div class="idiot__name">Ramon Bateman</div>
+                    <div class="nt">
+                      <div class="idiot__name">Ramon Bateman</div>
+                      <div class="time">11:59 AM</div>
+                    </div>
+                    <div class="comment"><a href="/">@aa_da </a>What's the reason for the van? Saving money or just like to get outside? If you've got a stable source of income you could always do
+                         some short term Airbnbs + buy a truck/topper, build a platform in the back. That way you can always convert it back to a truck and sleep in
+                        an apartment if you want.</div>
                 </div>
                </div>
-                
+               <hr>
+            <div class="write">
+                <div class="smm">
+                    <div class="screpa"><img src="svg/box3/write icon/screpa.svg" alt="screpa"></div>
+                    <div class="mike"><img src="svg/box3/write icon/mike.svg" alt="mike"></div>
+                    <div class="imess"><input type="text" placeholder="Message in #general" class="mig"></div>
+                </div>    
+                <div class="smile"><img src="svg/box3/write icon/smile.svg" alt="smile"></div>
             </div>
-            <div class="write"></div>
     </div>
 
     <div class="box4 line">
